// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breaking changes ruleset operation removal 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "removed",
      "location": Object {
        "conceptualLocation": Object {
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
        ],
        "jsonPath": "/paths/~1api~1users/get",
        "kind": "operation",
      },
      "removed": Object {
        "before": Object {
          "method": "get",
          "pathPattern": "/api/users",
        },
      },
    },
    "condition": "not remove operation",
    "docsLink": undefined,
    "error": "cannot remove an operation",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "Prevent operation removal",
    "passed": false,
    "received": undefined,
    "where": "removed operation: GET /api/users",
  },
]
`;

exports[`breaking changes ruleset request property optional to required 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": true,
        },
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": false,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "id",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "id",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/id",
        "kind": "field",
      },
    },
    "condition": "not make an optional request property required",
    "docsLink": undefined,
    "error": "cannot make a request property required",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent changing response property to optional",
    "passed": false,
    "received": undefined,
    "where": "changed property: id request body: application/json in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": true,
        },
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": false,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "id",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "id",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/id",
        "kind": "field",
      },
    },
    "condition": "not change request property type",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent request property type changes",
    "passed": true,
    "received": undefined,
    "where": "changed property: id request body: application/json in operation: GET /api/users",
  },
]
`;

exports[`breaking changes ruleset request property type change 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "type": "number",
          },
          "key": "id",
          "required": true,
        },
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": true,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "id",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "id",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/id",
        "kind": "field",
      },
    },
    "condition": "not make an optional request property required",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent changing response property to optional",
    "passed": true,
    "received": undefined,
    "where": "changed property: id request body: application/json in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "type": "number",
          },
          "key": "id",
          "required": true,
        },
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": true,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "id",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "id",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/id",
        "kind": "field",
      },
    },
    "condition": "not change request property type",
    "docsLink": undefined,
    "error": "expected request body property to not change type",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent request property type changes",
    "passed": false,
    "received": undefined,
    "where": "changed property: id request body: application/json in operation: GET /api/users",
  },
]
`;

exports[`breaking changes ruleset required request property added 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "flatSchema": Object {
          "type": "string",
        },
        "key": "anotherKey",
        "required": true,
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "anotherKey",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "anotherKey",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/anotherKey",
        "kind": "field",
      },
    },
    "condition": "not add required request property",
    "docsLink": undefined,
    "error": "cannot add a required request property to an existing operation",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent changing response property to optional",
    "passed": false,
    "received": undefined,
    "where": "added property: anotherKey request body: application/json in operation: GET /api/users",
  },
]
`;

exports[`breaking changes ruleset response property removed 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "removed",
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "name",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "name",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/name",
        "kind": "field",
      },
      "removed": Object {
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "name",
          "required": false,
        },
      },
    },
    "condition": "not change response body property from required to optional",
    "docsLink": undefined,
    "error": "cannot remove a response property",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent removing response property",
    "passed": false,
    "received": undefined,
    "where": "removed property: name in response status code: 200 with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`breaking changes ruleset response property required to optional 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": false,
        },
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": true,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "id",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "id",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/id",
        "kind": "field",
      },
    },
    "condition": "not change response body property from required to optional",
    "docsLink": undefined,
    "error": "cannot make a required response property optional",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent making response property optional",
    "passed": false,
    "received": undefined,
    "where": "changed property: id in response status code: 200 with content-type: application/json in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": false,
        },
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": true,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "id",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "id",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/id",
        "kind": "field",
      },
    },
    "condition": "not change response property type",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent response property type changes",
    "passed": true,
    "received": undefined,
    "where": "changed property: id in response status code: 200 with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`breaking changes ruleset response property type change 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "type": "number",
          },
          "key": "id",
          "required": false,
        },
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": false,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "id",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "id",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/id",
        "kind": "field",
      },
    },
    "condition": "not change response body property from required to optional",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent making response property optional",
    "passed": true,
    "received": undefined,
    "where": "changed property: id in response status code: 200 with content-type: application/json in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "type": "number",
          },
          "key": "id",
          "required": false,
        },
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": false,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "id",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "id",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/id",
        "kind": "field",
      },
    },
    "condition": "not change response property type",
    "docsLink": undefined,
    "error": "expected response body property to not change type",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent response property type changes",
    "passed": false,
    "received": undefined,
    "where": "changed property: id in response status code: 200 with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`breaking changes ruleset root request body type change 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "type": "string",
          },
        },
        "before": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "type": "object",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json",
        "kind": "body",
      },
    },
    "condition": "not change request property type",
    "docsLink": undefined,
    "error": "expected request body property to not change type",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent request property type changes",
    "passed": false,
    "received": undefined,
    "where": "changed request with content-type: application/json in operation: GET /api/users",
  },
]
`;

exports[`breaking changes ruleset root response body type change 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "type": "string",
          },
        },
        "before": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "type": "number",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
    },
    "condition": "not change response property type",
    "docsLink": undefined,
    "error": "expected response body property to not change type",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent response property type changes",
    "passed": false,
    "received": undefined,
    "where": "changed response status code: 200 with content-type: application/json  in operation: GET /api/users",
  },
]
`;

exports[`breaking changes ruleset valid changes 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "in": "cookie",
          "name": "enum-widening",
          "schema": Object {
            "enum": Array [
              1,
              2,
              3,
            ],
            "type": "number",
          },
        },
        "before": Object {
          "in": "cookie",
          "name": "enum-widening",
          "schema": Object {
            "enum": Array [
              1,
              2,
            ],
            "type": "number",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "cookie": "enum-widening",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "cookie",
          "enum-widening",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/3",
        "kind": "cookie-parameter",
      },
    },
    "condition": "not remove possible values from a cookie parameter enum",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent cookie parameters enum breaking changes",
    "passed": true,
    "received": undefined,
    "where": "changed cookie parameter: enum-widening in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "in": "cookie",
          "name": "enum-widening",
          "schema": Object {
            "enum": Array [
              1,
              2,
              3,
            ],
            "type": "number",
          },
        },
        "before": Object {
          "in": "cookie",
          "name": "enum-widening",
          "schema": Object {
            "enum": Array [
              1,
              2,
            ],
            "type": "number",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "cookie": "enum-widening",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "cookie",
          "enum-widening",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/3",
        "kind": "cookie-parameter",
      },
    },
    "condition": "not add an enum to restrict possible values for a cookie parameter",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent cookie parameters enum breaking changes",
    "passed": true,
    "received": undefined,
    "where": "changed cookie parameter: enum-widening in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "in": "cookie",
          "name": "enum-widening",
          "schema": Object {
            "enum": Array [
              1,
              2,
              3,
            ],
            "type": "number",
          },
        },
        "before": Object {
          "in": "cookie",
          "name": "enum-widening",
          "schema": Object {
            "enum": Array [
              1,
              2,
            ],
            "type": "number",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "cookie": "enum-widening",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "cookie",
          "enum-widening",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/3",
        "kind": "cookie-parameter",
      },
    },
    "condition": "not change parameter type",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent cookie parameters type changes",
    "passed": true,
    "received": undefined,
    "where": "changed cookie parameter: enum-widening in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "in": "header",
          "name": "enum-removal",
          "schema": Object {
            "type": "number",
          },
        },
        "before": Object {
          "in": "header",
          "name": "enum-removal",
          "schema": Object {
            "enum": Array [
              1,
              2,
            ],
            "type": "number",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "header": "enum-removal",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "header",
          "enum-removal",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/4",
        "kind": "header-parameter",
      },
    },
    "condition": "not remove possible values from a header parameter enum",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent header parameters enum breaking changes",
    "passed": true,
    "received": undefined,
    "where": "changed header parameter: enum-removal in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "in": "header",
          "name": "enum-removal",
          "schema": Object {
            "type": "number",
          },
        },
        "before": Object {
          "in": "header",
          "name": "enum-removal",
          "schema": Object {
            "enum": Array [
              1,
              2,
            ],
            "type": "number",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "header": "enum-removal",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "header",
          "enum-removal",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/4",
        "kind": "header-parameter",
      },
    },
    "condition": "not add an enum to restrict possible values for a header parameter",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent header parameters enum breaking changes",
    "passed": true,
    "received": undefined,
    "where": "changed header parameter: enum-removal in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "in": "header",
          "name": "enum-removal",
          "schema": Object {
            "type": "number",
          },
        },
        "before": Object {
          "in": "header",
          "name": "enum-removal",
          "schema": Object {
            "enum": Array [
              1,
              2,
            ],
            "type": "number",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "header": "enum-removal",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "header",
          "enum-removal",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/4",
        "kind": "header-parameter",
      },
    },
    "condition": "not change parameter type",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent header parameters type changes",
    "passed": true,
    "received": undefined,
    "where": "changed header parameter: enum-removal in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "in": "query",
          "name": "required",
          "schema": Object {
            "type": "string",
          },
        },
        "before": Object {
          "in": "query",
          "name": "required",
          "required": true,
          "schema": Object {
            "type": "string",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "query": "required",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "query",
          "required",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "query-parameter",
      },
    },
    "condition": "not remove possible values from a query parameter enum",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent query parameters enum breaking changes",
    "passed": true,
    "received": undefined,
    "where": "changed query parameter: required in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "in": "query",
          "name": "required",
          "schema": Object {
            "type": "string",
          },
        },
        "before": Object {
          "in": "query",
          "name": "required",
          "required": true,
          "schema": Object {
            "type": "string",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "query": "required",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "query",
          "required",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "query-parameter",
      },
    },
    "condition": "not add an enum to restrict possible values for a query parameter",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent query parameters enum breaking changes",
    "passed": true,
    "received": undefined,
    "where": "changed query parameter: required in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "in": "query",
          "name": "required",
          "schema": Object {
            "type": "string",
          },
        },
        "before": Object {
          "in": "query",
          "name": "required",
          "required": true,
          "schema": Object {
            "type": "string",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "query": "required",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "query",
          "required",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "query-parameter",
      },
    },
    "condition": "not change parameter type",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent query parameters type changes",
    "passed": true,
    "received": undefined,
    "where": "changed query parameter: required in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "in": "cookie",
          "name": "enum-widening",
          "schema": Object {
            "enum": Array [
              1,
              2,
              3,
            ],
            "type": "number",
          },
        },
        "before": Object {
          "in": "cookie",
          "name": "enum-widening",
          "schema": Object {
            "enum": Array [
              1,
              2,
            ],
            "type": "number",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "cookie": "enum-widening",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "cookie",
          "enum-widening",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/3",
        "kind": "cookie-parameter",
      },
    },
    "condition": "not make an optional cookie parameter required",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent requiring existing cookie parameters",
    "passed": true,
    "received": undefined,
    "where": "changed cookie parameter: enum-widening in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "in": "header",
          "name": "enum-removal",
          "schema": Object {
            "type": "number",
          },
        },
        "before": Object {
          "in": "header",
          "name": "enum-removal",
          "schema": Object {
            "enum": Array [
              1,
              2,
            ],
            "type": "number",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "header": "enum-removal",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "header",
          "enum-removal",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/4",
        "kind": "header-parameter",
      },
    },
    "condition": "not make an optional header parameter required",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent requiring existing header parameters",
    "passed": true,
    "received": undefined,
    "where": "changed header parameter: enum-removal in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "in": "query",
          "name": "required",
          "schema": Object {
            "type": "string",
          },
        },
        "before": Object {
          "in": "query",
          "name": "required",
          "required": true,
          "schema": Object {
            "type": "string",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "query": "required",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "query",
          "required",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "query-parameter",
      },
    },
    "condition": "not make an optional query parameter required",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent requiring existing query parameters",
    "passed": true,
    "received": undefined,
    "where": "changed query parameter: required in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": false,
        },
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": true,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "id",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "id",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/id",
        "kind": "field",
      },
    },
    "condition": "not make an optional request property required",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent changing response property to optional",
    "passed": true,
    "received": undefined,
    "where": "changed property: id request body: application/json in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "added": Object {
        "flatSchema": Object {
          "type": "number",
        },
        "key": "anotherId",
        "required": false,
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "anotherId",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "anotherId",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/anotherId",
        "kind": "field",
      },
    },
    "condition": "not add required request property",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent changing response property to optional",
    "passed": true,
    "received": undefined,
    "where": "added property: anotherId request body: application/json in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": false,
        },
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "id",
          "required": true,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inRequest": Object {
            "body": Object {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": Array [
            "id",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "id",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/id",
        "kind": "field",
      },
    },
    "condition": "not change request property type",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent request property type changes",
    "passed": true,
    "received": undefined,
    "where": "changed property: id request body: application/json in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "name",
          "required": true,
        },
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "name",
          "required": false,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "name",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "name",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/name",
        "kind": "field",
      },
    },
    "condition": "not change response body property from required to optional",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent making response property optional",
    "passed": true,
    "received": undefined,
    "where": "changed property: name in response status code: 200 with content-type: application/json in operation: GET /api/users",
  },
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "name",
          "required": true,
        },
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "name",
          "required": false,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "name",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "name",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/name",
        "kind": "field",
      },
    },
    "condition": "not change response property type",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "prevent response property type changes",
    "passed": true,
    "received": undefined,
    "where": "changed property: name in response status code: 200 with content-type: application/json in operation: GET /api/users",
  },
]
`;
